--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,31 +5,31 @@
 
 resources:
   repositories:
-  - repository: hushalla # The name used to reference this repository in the checkout step
-    type: github
-    endpoint: icomdev
-    name: icomdev/hushalla
-  - repository: forena-utilities
-    type: github
-    endpoint: icomdev
-    name: icomdev/forena-utilities
-    
+    - repository: boilerplate # The name used to reference this repository in the checkout step
+      type: github
+      endpoint: icomdev
+      name: icomdev/boilerplate
+    - repository: forena-utilities
+      type: github
+      endpoint: icomdev
+      name: icomdev/forena-utilities
+
 trigger:
-- main
+  - main
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
-- checkout: self
-  clean: true
+  - checkout: self
+    clean: true
 
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '10.x'
+    displayName: 'Install Node.js'
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+  - script: |
+      npm install
+      npm run build
+    displayName: 'npm install and build'
